# whisper-finetune-research

./: .gitignore  README.md  generate_thesis.js  inference_service.py  package-lock.json  pyproject.toml
docs/superpowers/plans/: 2026-05-27-sv-data-ablation-plan.md
local/: 01_full_compare.ipynb  02_full_compare.ipynb  03_analysis.ipynb  04_whisper_baseline.ipynb  05_primewords_eval.ipynb  05_whisper_lora_eval.ipynb  06_sv_ablation_eval.ipynb  07_sv_ablation_analysis.ipynb  audio_extra_link  audio_link  long_audio_eval.json  long_audio_report.html  model_comparison.json  oss_migrate.py  oss_utils.py  primewords_test.jsonl  pyproject.toml  upload_remote.py  upload_to_oss.py
local/.ipynb_checkpoints/: 01_full_compare-checkpoint.ipynb  02_full_compare-checkpoint.ipynb  03_analysis-checkpoint.ipynb  asr_report-checkpoint.html
papers/: README.md  lora_paper_zh.md
prepared_data/funasr_nano/: val.jsonl
prepared_data/sensevoice/: test.jsonl  val.jsonl
remote/: 01_finetune.ipynb  02_finetune_nano.ipynb  03_test_long_audio.ipynb  04_compare.ipynb  05_finetune_whisper.ipynb  05_finetune_whisper_test.ipynb  05_prepare_whisper.ipynb  06_data_ablation.ipynb  07_data_ablation.ipynb  08_noise_b.ipynb  09A_noise_mixed_a.ipynb  09B_noise_mixed_b.ipynb  09_noise_mixed.ipynb  requirements_whisper.txt  train_nano.sh
remote/.ipynb_checkpoints/: 03_test_long_audio-checkpoint.ipynb  04_compare-checkpoint.ipynb
skills/: .skills_store_lock.json
skills/academic-writing-refiner/: _meta.json
skills/harvard-paper-zh/: SKILL.md  _meta.json
skills/lunwen/: SKILL.md  requirements.txt
(+21 files in other folders)
