[project]
name = "hengdong-asr-local"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-oss-v2>=1.2.5",
    "editdistance>=0.8.1",
    "funasr>=1.3.1",
    "jupyterlab>=4.5.6",
    "jupyterlab-execute-time>=3.3.0",
    "jupyterlab-favorites>=3.5.0",
    "jupyterlab-theme-solarized-dark>=3.0.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "modelscope>=1.35.4",
    "soundfile>=0.13.1",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "transformers>=5.6.2",
]
